force-app/main/default/objects/Review_Request_Event__c/Review_Request_Event__c.object-meta.xml
<CustomObject>
    <label>Review Request Event</label>
    <pluralLabel>Review Request Events</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Review Request Event</label>
        <displayFormat>RRE-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>