force-app/main/default/objects/Review_Request_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Review_Request_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>