force-app/main/default/objects/Review_Request_Event__c/fields/Message_Subject__c.field-meta.xml
<CustomField>
    <fullName>Message_Subject__c</fullName>
    <label>Message Subject</label>
    <type>Text</type>
    <length>255</length>
</CustomField>