force-app/main/default/objects/Review_Request_Event__c/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <type>Phone</type>
</CustomField>