force-app/main/default/objects/Review_Request_Event__c/fields/Review_Request__c.field-meta.xml
<CustomField>
    <fullName>Review_Request__c</fullName>
    <label>Review Request</label>
    <referenceTo>Review_Request__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>