force-app/main/default/objects/Review_Request_Event__c/fields/Review_Request_Config__c.field-meta.xml
<CustomField>
    <fullName>Review_Request_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Request Config</label>
    <referenceTo>Review_Request_Config__c</referenceTo>
    <relationshipName>Review_Request_Events</relationshipName>
    <type>Lookup</type>
</CustomField>