force-app/main/default/objects/Review_Request_Event__c/fields/URL_Sent__c.field-meta.xml
<CustomField>
    <fullName>URL_Sent__c</fullName>
    <label>URL Sent</label>
    <type>Url</type>
</CustomField>